[package]
name = "tundra"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rfd = "0.14"
image = "0.25"
ico = "0.3"
zip = "1.1"
aes = "0.8"
ctr = "0.9"
binrw = "0.12"
flate2 = "1.0"
walkdir = "2.4"
anyhow = "1.0"
glam = "0.24"
winreg = "0.52"